--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="app_name">Galacticon</string>
-  <string name="api_key">INSERT API KEY HERE</string>
+  <string name="api_key">33gPiEtjIeF2HCDuNAMOb7F16YM701C4LDdVPhfs</string>
 
   <string name="title_activity_fullscreen">FullscreenActivity</string>
   <string name="change_layout_manager">Change Layout</string>
